# mwe-django-500

./: README.md  compose.yml  pyproject.toml
compose/nginx/sites-enabled/: default.conf
docker/: Dockerfile  createsuperuser.sh  entrypoint.sh
mwe/: manage.py
mwe/mwe/: asgi.py  settings.py  urls.py  wsgi.py
mwe/mwe/templates/: 404.html  500.html
mwe/mwe/templates/mwe/: base.html
