[project]
authors = [{name = "Raniere Gaia Costa da Silva", email = "Raniere.CostadaSilva@gesis.org"}]
dependencies = []
name = "mwe-django-500"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mwe_django_500 = { path = ".", editable = true }

[tool.pixi.tasks]
runserver = { cmd = [
    "cd",
    "mwe",
    "&&",
    "python",
    "manage.py",
    "migrate",
    "&&",
    "python",
    "manage.py",
    "runserver"
], env = { DJANGO_DEBUG = "false" } }
rundevserver = { cmd = [
    "cd",
    "mwe",
    "&&",
    "python",
    "manage.py",
    "migrate",
    "&&",
    "python",
    "manage.py",
    "runserver"
], env = { DJANGO_DEBUG = "true" } }


[tool.pixi.dependencies]
django = ">=5.2.4,<6"
